syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {}
  rpc GetOrder(GetOrderRequest) returns (OrderResponse) {}
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse) {}
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
}

message CreateOrderRequest {
  string customerId = 1;
  string customerEmail = 2;
  repeated OrderItem items = 3;
  ShippingAddress shippingAddress = 4;
}

message OrderItem {
  string productId = 1;
  int32 quantity = 2;
  double unitPrice = 3;
}

message ShippingAddress {
  string street = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string zipCode = 5;
}

message GetOrderRequest {
  string orderId = 1;
}

message UpdateOrderStatusRequest {
  string orderId = 1;
  OrderStatus status = 2;
}

message ListOrdersRequest {
  string customerId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message OrderResponse {
  string id = 1;
  string customerId = 2;
  string customerEmail = 3;
  OrderStatus status = 4;
  double totalAmount = 5;
  ShippingAddress shippingAddress = 6;
  repeated OrderItem items = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
  int32 totalCount = 2;
}

enum OrderStatus {
  PENDING = 0;
  CONFIRMED = 1;
  DELIVERED = 2;
  CANCELLED = 3;
}
